--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@
 }
 */
 
-
-
 body {
     background: var(--color--background);
     font-family: "Inter", sans-serif;
@@ -100,11 +98,39 @@ textarea{
 .btn-encriptar{
     background-color: var(--color-blue);
     color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    outline: none;
+    transition: transform 0.8s, box-shadow 0.8s;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.btn-encriptar:hover{
+    background-color: white;
+    color: var(--color-blue);
+    transform: translateY(-3px);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.5); 
 }
 
 .btn-desencriptar{
     background-color: var(--color-gris);
     color: var(--color-blue);
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    outline: none;
+    transition: transform 0.8s, box-shadow 0.8s;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.btn-desencriptar:hover{
+    background-color: var(--color-blue);
+    color: var(--color-gris);
+    transform: translateY(-3px);;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.5);
 }
 
 /* Parte Derecha del Encriptador */
@@ -158,12 +184,27 @@ textarea{
     font-family: "Inter", sans-serif;
 }
 
-.btn-copiar{
+.btn-copiar {
     width: 100%;
     display: none;
     background-color: transparent;
     color: var(--color-blue);
+    border: 1px solid var(--color-blue);
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    outline: none;
+    transition: transform 0.8s, box-shadow 0.8s;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
 }
+
+.btn-copiar:hover {
+    background-color: var(--color-blue);
+    color: white;
+    transform: translateY(-3px);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.5);
+}
+
 
 /* .oculto{
     display: none;
@@ -183,12 +224,21 @@ textarea{
         margin: auto 40px;
     }
 
-    .button-izquierda{
+    .button-izquierda {
+        display: flex;
         justify-content: center;
+        gap: 10px; /* Agrega espacio entre los botones */
     }
 
     .btn-encriptar, .btn-desencriptar, .btn-copiar{
         width: 45%;
+        padding: 10px;
+        border: none;
+        font-size: 16px; 
+        font-weight: bold; 
+        text-align: center; 
+        cursor: pointer; 
+        transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     }
 
     .parte-derecha{
@@ -205,8 +255,14 @@ textarea{
         margin: auto 16px;
     }
     
-    .btn-encriptar, .btn-desencriptar, .btn-copiar{
+    .btn-encriptar,
+    .btn-desencriptar,
+    .btn-copiar {
         max-width: none;
         width: 100%;
+        transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        transform: scale(1);
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     }
+
 }
