--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@
     --color--background: var(--color-celeste);
 }
 
-/* 
+
 * {
     margin: 0;
     padding: 0;
+    font-family: "Inter", sans-serif;
 }
-*/
+
 
 body {
     background: var(--color--background);
@@ -76,10 +77,11 @@ textarea{
     color: var(--color-gray);
 }
 
-.button-izquierda{
+.button-izquierda {
     display: flex;
-    gap: 24px;
-    margin-top: 16px;
+    gap: 3vw; 
+    margin-top: 2vh; 
+    justify-content: center; 
     flex-wrap: wrap;
 }
 
@@ -180,6 +182,7 @@ textarea{
     font-size: 16px;
     text-align: center;
     font-family: "Inter", sans-serif;
+    margin-bottom: 20px;
 }
 
 .btn-copiar {
@@ -254,7 +257,6 @@ footer a:hover {
     .btn-encriptar, .btn-desencriptar, .btn-copiar{
         width: 45%;
         padding: 10px;
-        border: none;
         font-size: 16px; 
         font-weight: bold; 
         text-align: center; 
