--- a/style.css
+++ b/style.css
@@ -40,30 +40,33 @@ textarea{
 /* Esto es el Main del proyecto */
 
 .main{
-    width: 80.5%;
-    margin: auto 40px auto auto;
+    width: 90%;
+    margin: auto 50px auto auto;
     display: grid;
     grid-template-columns: 2fr 1fr;
     min-height: calc(100vh - 91px - 72px);
-    align-items: end;
+    align-items: center;
 }
 
 /* Parte Izquierda del Encriptador */
 .parte-izquierda{
-    height: 85%;
+    height: 95%;
     display: flex;
     flex-direction: column;
+    align-items: stretch;
     justify-content: space-between;
 }
 
 .ingresar-texto{
-    width: 80%;
+    width: 95%;
+    height: 100%;
     font-size: 32px;
     color: var(--color-blue);
     resize: none;
     background: none;
     border: none;
     outline: none;
+    align-self: center;
 }
 
 .ingresar-texto::placeholder{
@@ -136,20 +139,21 @@ textarea{
 /* Parte Derecha del Encriptador */
 .parte-derecha{
     background-color: #ffffff;
-    height: calc(100% + 48px);
+    /* height: calc(100% + 48px); */
+    height: 100%;
     border-radius: 32px;
     padding: 32px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 32px;
-    align-items: center;
+    justify-content: space-evenly;
+    gap: 22px;
+    align-items: stretch;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 }
 
 .parte-derecha.ajustar{
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .munieco{
@@ -167,8 +171,12 @@ textarea{
     resize: none;
     text-align: center;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 32px;
     font-family: "Inter", sans-serif;
+    /* width: 100%; */
+    height: auto;
+    padding: 0;
+    margin: 0;
 }
 
 .mensaje-final.ajustar{
@@ -182,7 +190,6 @@ textarea{
     font-size: 16px;
     text-align: center;
     font-family: "Inter", sans-serif;
-    margin-bottom: 20px;
 }
 
 .btn-copiar {
@@ -212,10 +219,11 @@ footer {
     color: #ffffff;
     padding: 20px 0;
     text-align: center;
-    position: fixed;
-    bottom: 0;
     width: 100%;
     font-family: "Inter", sans-serif;
+    position: fixed;
+    bottom: 0;
+    z-index: 999; /* Asegura que esté por encima de otros elementos */
 }
 
 footer p {
@@ -255,13 +263,16 @@ footer a:hover {
     }
 
     .btn-encriptar, .btn-desencriptar, .btn-copiar{
+        align-self: center;
         width: 45%;
         padding: 10px;
         font-size: 16px; 
-        font-weight: bold; 
+        font-weight: normal; 
         text-align: center; 
         cursor: pointer; 
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        font-style: normal;
+        margin-bottom: 20px;
     }
 
     .parte-derecha{
@@ -270,6 +281,11 @@ footer a:hover {
 
     .munieco{
         display: none;
+    }
+
+    footer {
+        padding: 10px 0; /* Reduce el espacio interno */
+        font-size: 0.9em; /* Reduce el tamaño del texto */
     }
 }
 
@@ -286,6 +302,7 @@ footer a:hover {
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         transform: scale(1);
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        font-style: normal;
     }
 
 }
